# ruby

./: .appveyor.yml  .cirrus.yml  .cirrus.yml_  .clang-format  .cvsignore  .dir-locals.el  .document  .drone.star  .drone.yml  .editorconfig  .excludes-zjit  .gdbinit  .git-blame-ignore-revs  .gitattributes  .gitignore  .indent.pro  .mailmap  .rdoc_options  .rspec_parallel  .travis.yml  1  2  BSDL  C-IF  CONTRIBUTING.md  COPYING  COPYING.ja  COPYING.jp  Cargo.toml  ChangeLog  Dockerfile  Dockerfile.container  Dockerfile.ruby  Doxyfile.in  FAQ  Gemfile  Greatgroup3  KNOWNBUGS.rb  LEGAL  MANIFEST  (+472 more)
.downloaded-cache/: config.guess  config.sub
.github/: CODEOWNERS  SECURITY.md  auto_request_review.yml  dependabot.yml  dependents+hannahzacharski  labeler.yml  pull_request_template.md  zizmor.yml
.hooks/: clang-format  clang-format-all  clang-format-head
CVS/: Entries  Repository
RLGC_DOC/: CAMPAIGN_FINDINGS.md  GENERIC_FIELDS_PLAN.md  IMPROVEMENT_PLAN_2026-07-07.md  PERF_2026-07-06.md  RACTOR_LOCAL_GC_DESIGN.md  REVIEW_2026-07-04.md  REVIEW_GUIDE.md  RLGC_STATUS.md  RLGC_V1_FINDINGS.md  STATUS_v2.md  design_v2.md  tsan_ignorelist.txt  tsan_suppressions.txt
basictest/: runner.rb  test.rb
bcc32/: Makefile.sub  README.bcc32  configure.bat  mkexports.rb  setup.mak
benchmark/: README.md  app_answer.yml  app_aobench.rb  app_aobench.yml  app_erb.yml  app_factorial.yml  app_fib.rb  app_fib.yml  app_lc_fizzbuzz.rb  app_lc_fizzbuzz.yml  app_mandelbrot.rb  app_mandelbrot.yml  app_pentomino.rb  app_pentomino.yml  app_raise.yml  app_strconcat.rb  app_strconcat.yml  app_tak.rb  app_tak.yml  app_tarai.yml  app_uri.yml  array_each.yml  array_extract.rb  array_flatten.yml  array_grep.yml  array_intersection.yml  array_join.yml  array_join_regression.yml  array_large_literal.yml  array_map.yml  array_max_float.yml  array_max_int.yml  array_max_str.yml  array_min.yml  array_minmax.yml  array_none_match.yml  array_return_self.yml  array_sample.yml  array_sample_100k_10.rb  array_sample_100k_10.yml  (+782 more)
beos/: ruby.def.in
bootstraptest/: featurebug.rb  pending.rb  runner.rb  test_attr.rb  test_autoload.rb  test_block.rb  test_class.rb  test_comment.rb  test_constant_cache.rb  test_env.rb  test_eval.rb  test_exception.rb  test_fiber.rb  test_finalizer.rb  test_flow.rb  test_fork.rb  test_gc.rb  test_insns.rb  test_io.rb  test_jump.rb  test_knownbug.rb  test_literal.rb  test_literal_suffix.rb  test_load.rb  test_m17n.rb  test_marshal.rb  test_massign.rb  test_method.rb  test_mjit.rb  test_objectspace.rb  test_proc.rb  test_ractor.rb  test_rjit.rb  test_string.rb  test_struct.rb  test_syntax.rb  test_thread.rb  test_ujit.rb  test_ujit_many_funs.rb  test_yjit.rb  (+5 more)
coroutine/: Stack.h
coverage/: README
cygwin/: GNUmakefile.in
defs/: default_gems  dtrace.d  gmake.mk  id.def  jit.mk  keywords  known_errors.def  lex.c.src  tags.mk  (+4 more)
gc/mmtk/: Cargo.toml  cbindgen.toml  depend  extconf.rb  mmtk.c  mmtk.h  zjit_fastpath.h
gc/mmtk/src/: abi.rs  active_plan.rs  api.rs  binding.rs  collection.rs  lib.rs  object_model copy.rs  object_model.rs  pinning_registry.rs  ppp.rs  reference_glue.rs  scanning.rs  utils.rs  weak_proc.rs
gc/mmtk/src/heap/: cpu_heap_trigger.rs  mod.rs  ruby_heap_trigger.rs
yjit/: .gitignore  Cargo.toml  not_gmake.mk  yjit.mk
yjit/bindgen/: Cargo.toml
yjit/bindgen/src/: main.rs
yjit/src/: codegen.rs  compilation_log.rs  core.rs  cruby.rs  cruby_bindings.inc.rs  disasm.rs  invariants.rs  ir.rs  lib.rs  log.rs  options.rs  stats.rs  utils.rs  virtualmem.rs  yjit.rs
yjit/src/asm/: mod.rs
yjit/src/asm/aarch64/: mod.rs  tests.rs
yjit/src/asm/arm64/: README.md  mod.rs  opnd.rs
yjit/src/asm/arm64/arg/: bitmask_imm.rs  condition.rs  mod.rs  sf.rs  shifted_imm.rs  sys_reg.rs  truncate.rs
yjit/src/asm/arm64/inst/: atomic.rs  branch.rs  branch_cond.rs  branches_and_system.rs  breakpoint.rs  call.rs  conditional.rs  data_imm.rs  data_processing_immediate.rs  data_processing_register.rs  data_reg.rs  family.rs  halfword_imm.rs  load.rs  load_literal.rs  load_register.rs  load_store.rs  load_store_exclusive.rs  loads_and_stores.rs  logical_imm.rs  logical_reg.rs  madd.rs  mod.rs  mov.rs  movk.rs  nop.rs  pc_rel.rs  reg_pair.rs  sbfm.rs  shift_imm.rs  smulh.rs  store.rs  sys_reg.rs  test_bit.rs
yjit/src/asm/x86_64/: mod.rs  tests.rs
yjit/src/backend/: ir.rs  ir_ssa.rs  mod.rs  tests.rs  unwind.rs
yjit/src/backend/arm64/: mod.rs
yjit/src/backend/x86_64/: mod.rs
yjit/src/codegen/: aarch64.rs  mod.rs  x86_64.rs
yjit/src/utils/: aarch64.rs  mod.rs  x86_64.rs
zjit/: .gitattributes  .gitignore  Cargo.toml  build.rs  tags  zjit.mk
zjit/bindgen/: Cargo.toml
zjit/bindgen/src/: main.rs
zjit/src/: assertions.rs  backend.rs  bitset.rs  cast.rs  codegen.rs  codegen_tests.rs  cruby.rs  cruby_bindings.inc.rs  cruby_methods.rs  disasm.rs  distribution.rs  gc.rs  gen_hir_type.rb  hir.rs  hir_type.inc.rs  hir_type.rs  hir_type_generated.rs  invariants.rs  ir.rs  jit_frame.rs  json.rs  lib.rs  main.rs  options.rs  payload.rs  profile.rs  state.rs  stats.rs  ttycolors.rs  utils.rs  virtualmem.rs  yjit_stubs.rs
zjit/src/asm/: mod.rs
zjit/src/asm/arm64/: README.md  mod.rs  opnd.rs
zjit/src/asm/arm64/arg/: bitmask_imm.rs  condition.rs  inst_offset.rs  mod.rs  sf.rs  shifted_imm.rs  sys_reg.rs  truncate.rs
zjit/src/asm/arm64/inst/: atomic.rs  branch.rs  branch_cond.rs  breakpoint.rs  call.rs  conditional.rs  data_imm.rs  data_reg.rs  halfword_imm.rs  load_literal.rs  load_register.rs  load_store.rs  load_store_exclusive.rs  logical_imm.rs  logical_reg.rs  madd.rs  mod.rs  mov.rs  nop.rs  pc_rel.rs  reg_pair.rs  sbfm.rs  shift_imm.rs  smulh.rs  sys_reg.rs  test_bit.rs  udf.rs
zjit/src/asm/x86_64/: mod.rs  tests.rs
zjit/src/backend/: ir.rs  lir.rs  mod.rs  parcopy.rs  tests.rs
zjit/src/backend/arm64/: mod.rs
zjit/src/backend/x86_64/: mod.rs
zjit/src/codegen/: gc_fastpath.rs
zjit/src/hir/: opt_tests.rs  tests.rs  value_numbering.rs
zjit/src/hir_effect/: gen_hir_effect.rb  hir_effect.inc.rs  mod.rs
zjit/src/hir_type/: gen_hir_type.rb  hir_type.inc.rs  mod.rs
(+23555 files in other folders)
